[package]
name = "vulkano_pathtracer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bytemuck = { version = "1.24.0", features = ["derive"] }
dolly = "0.6.0"
glam = { version = "0.29", features = ["mint"] }
image = "0.25.9"
iter = "0.1.0"
rfd = "0.16.0"
vulkano = "0.35.2"
vulkano-shaders = "0.35.0"
winit = { version = "0.30.12", features = [ "rwh_06", "wayland" ] }
